--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 
     // Other
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'net.objecthunter:exp4j:0.4.8'
 
