--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.anafthdev.calcc"
         minSdk 24
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -63,19 +63,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.ui:ui-util:1.2.0-beta02"
+    implementation "androidx.compose.ui:ui-util:1.2.0-beta03"
     implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     // Material Design
-    implementation "androidx.compose.material:material:1.2.0-beta02"
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation "androidx.compose.material:material:1.2.0-beta03"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha12"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha13"
 
     // Dependency Injection
     implementation 'com.google.dagger:hilt-android:2.39.1'
